2001-03-27  Bruno Haible  <haible@clisp.cons.org>

	* package.d (SYSTEM::PACKAGE-ITERATE): When looking for inherited
	symbols, ignore symbols that are simultaneously exported from the
	used package and present in the main package.
	Reported by Sam Steingold.

2001-03-22  Sam Steingold  <sds@gnu.org>

	fixed a bug: a single value was sometimes returned by `read-line'
	* io.d (eof_handling): mv_count argument added
	(read_w, READ-CHAR, PEEK-CHAR, READ-CHAR-NO-HANG): respect that
	(READ-LINE): always return 2 values

2001-03-22  Bruno Haible  <haible@clisp.cons.org>

	* lispbibl.d (sstring_normal_p): Fix typo.

2001-03-21  Bruno Haible  <haible@clisp.cons.org>

	Make it possible to compile gstream.lisp with interpreted.mem.
	* compiler.lisp: Compile #'venv-search.

2001-03-21  Bruno Haible  <haible@clisp.cons.org>

	* misc.d: Include <stdio.h>.

2001-03-21  Bruno Haible  <haible@clisp.cons.org>

	Make --without-unicode work again.
	* error.d (write_errorasciz_substring): Fix typo.
	* init.lisp: Load "spanish" only if UNICODE.
	* makemake.in (LPARTS): Add "spanish" only if UNICODE is enabled.
	* type.lisp (charset-subtypep): Avoid warning.
	* stream.d (test_external_format_arg) [!UNICODE]: Accept and ignore
	any symbols in the CHARSET package.

2001-03-20  Bruno Haible  <haible@clisp.cons.org>

	* configure: Add trailing slash to www.lisp.org URL.
	* cfgacorn.lisp (*clhs-root-default*): Likewise.
	* cfgamiga.lisp (*clhs-root-default*): Likewise.
	* cfgdos.lisp (*clhs-root-default*): Likewise.
	* cfgwin32.lisp (*clhs-root-default*): Likewise.
	* makemake.in (HSDEFAULT): Likewise.
	(hyperspec): Check existence of directory if it's an absolute
	directory. Remove trailing slash afterwards.
	* clhs.lisp (clhs): Accept a clhs-root with or without trailing slash.

2001-03-20  Bruno Haible  <haible@clisp.cons.org>

	* compiler.lisp (compile-file-pathname-helper): Rewritten. Obey
	output-file's directory even if it is a relative directory.
